# shinobi

./: .gitignore  :  :w  ;  Cargo.toml  README.md  ]  bitboard.txt  debug.py  dhat.out.2829  mine.txt  out.txt  perf.data  res.txt  stockfish.txt  test.sh
benches/: my_benchmark.rs
examples/: main.rs  perft.rs
shinobi-bin/: Cargo.toml
shinobi-bin/src/: main.rs
shinobi-core/: Cargo.toml  ]\  asm.sh  debug.sh  mvv.py  my-perft.sh  valid_perft.txt
shinobi-core/benches/: my_benchmark.rs
shinobi-core/examples/: perft.rs  simple_perft.rs
shinobi-core/src/: '  lib.rs  main.rs
shinobi-core/src/engine/: bot.rs  mod.rs  pv.rs  search.rs  tt.rs  zobrist.rs
shinobi-core/src/magic/: magic_constants.rs  mod.rs
shinobi-core/src/position/: bitboard.rs  castling_rights.rs  generator.rs  mod.rs  mov.rs  piece.rs  square.rs
shinobi-core/src/util/: constants.rs  enums.rs  mod.rs  perft.rs
shinobi-core/tests/: perft_test.rs
shinobi-gui/: Cargo.toml  out.txt
shinobi-gui/src/: app.rs  main.rs  util.rs
shinobi-tauri/: bun.lockb  package.json  vite.config.ts.timestamp-1710736805126-bf1e7109a2d67.mjs
shinobi-tauri/src/: App.tsx
shinobi-tauri/src-tauri/: Cargo.toml  tauri.conf.json
shinobi-tauri/src-tauri/src/: main.rs
shinobi-tauri/src/components/: Board.css  Board.tsx  Tile.tsx
shinobi-web/: Cargo.toml  build.sh
shinobi-web/.cargo/: config.toml
shinobi-web/pkg/: index.html  package-lock.json  package.json  shinobi_web.d.ts  shinobi_web.js  shinobi_web_bg.wasm  shinobi_web_bg.wasm.d.ts
shinobi-web/pkg/src/: App.css  App.tsx
shinobi-web/pkg/src/components/: Board.css  Board.tsx  Tile.css
shinobi-web/src/: lib.rs
src/: app.rs  bitboard.rs  constants.rs  engine.rs  enums.rs  generator.rs  lib.rs  magic.rs  magic_constants.rs  main.rs  perft.rs  position.rs  util.rs  zobrist.rs
src/engine/: bot.rs  mod.rs  tt.rs  zobrist.rs
src/magic/: mod.rs
src/position/: bitboard.rs  generator.rs  mod.rs
src/util/: constants.rs  mod.rs  perft.rs
tests/: perft_test.rs
