[package]
name = "shinobi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
strum = "0.24.1"
strum_macros = "0.24.3"
criterion = "0.4.0"

[dependencies.sdl2]
version = "0.35.2"
default-features = false
features = ["image", "gfx"]

[profile.release]
debug = true

[dev-dependicies]
criterion = {version = "0.4", features = ["html_reports"]}

[[bench]]
name = "my_benchmark"
harness = false
