[package]
name = "shinobi-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
strum = "0.24.1"
strum_macros = "0.24.3"
criterion = "0.4.0"
log = "0.4.20"
env_logger = "0.10.0"
rand_chacha = "0.3.1"
serde = { version = "1.0", features = ["derive"] }

#[dev-dependicies]
#criterion = {version = "0.4", features = ["html_reports"]}

[[bench]]
name = "my_benchmark"
harness = false

[[example]]
name = "perft"
