[package]
name = "shinobi-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
strum = "0.26.1"
strum_macros = "0.26.1"
log = "0.4.20"
env_logger = "0.11.0"
rand_chacha = "0.3.1"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4.38"
wasm-bindgen = "0.2.84"
serde-wasm-bindgen = "0.4"
serde_arrays = "0.1.0"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
criterion = "0.5.1"

[profile.release]
lto="fat"
codegen-units = 1
debug = false

[[bench]]
name = "my_benchmark"
harness = false

[[example]]
name = "perft"
