[package]
name = "shinobi-web"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
getrandom = { version = "0.2", features = ["js"] }
shinobi-core = {path= "../shinobi-core"}
wasm-bindgen = "0.2"
console_log = { version = "1", features = ["color"] }
log = "0.4.22"
js-sys = "0.3.72"
instant = { version = "0.1", features = [ "wasm-bindgen"]}
